fix nav menu z-index

--- a/src/documents/styles/_modules/header.scss
+++ b/src/documents/styles/_modules/header.scss
@@ -82,7 +82,7 @@ body.framed header
                 {
                     display: none;
                     position: absolute;
-                    z-index: 10;
+                    z-index: 15;
                     top: 20px;
                     left: 0;
                     padding: 0;
